--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-sklearn==1.2.2
-numpy==1.20.3
-scipy==1.1.0
-matplotlib==3.0.2
-PIL==5.4.1
-keras==2.2.4
+sklearn
+numpy
+scipy
+matplotlib
+PIL
+keras
 playsound
